fix: update mod details

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx3G
 
 mod_version = 1.0.0
-maven_group = net.fabricmc
-archives_base_name = fabric-example-mod
+maven_group = io.github.marcus8448.mods
+archives_base_name = snowy
 
 minecraft_version=1.16.4
 yarn_mappings=1.16.4+build.7
