fix: make snow data persist on world reload

--- a/src/main/resources/snowy.mixins.json
+++ b/src/main/resources/snowy.mixins.json
@@ -5,7 +5,7 @@
   "compatibilityLevel": "JAVA_8",
   "mixins": [
     "BiomeAccessor",
-    "BiomeArrayMixin",
+    "ChunkDataS2CPacketMixin",
     "ServerWorldMixin",
     "SnowPlacementMixin"
   ],
